; ModuleID = '/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_dgfirmware.c_write_kernel.c'
source_filename = "/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_dgfirmware.c_write_kernel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"wb\00", align 1
@app_name = common dso_local global i8* null, align 8
@KERNEL_START = common dso_local global i32 0, align 4
@KERNEL_SIZE = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [29 x i8] c"%s: can't write kernel file\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @write_kernel(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = call i32* @fopen(i8* %6, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load i8*, i8** @app_name, align 8
  %12 = call i32 @perror(i8* %11)
  %13 = call i32 @exit(i32 -1) #3
  unreachable

14:                                               ; preds = %2
  %15 = load i8*, i8** %3, align 8
  %16 = load i32, i32* @KERNEL_START, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i8, i8* %15, i64 %17
  %19 = load i64, i64* @KERNEL_SIZE, align 8
  %20 = load i32*, i32** %5, align 8
  %21 = call i64 @fwrite(i8* %18, i32 1, i64 %19, i32* %20)
  %22 = load i64, i64* @KERNEL_SIZE, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %31

24:                                               ; preds = %14
  %25 = load i32, i32* @stderr, align 4
  %26 = load i8*, i8** @app_name, align 8
  %27 = call i32 @fprintf(i32 %25, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0), i8* %26)
  %28 = load i32*, i32** %5, align 8
  %29 = call i32 @fclose(i32* %28)
  %30 = call i32 @exit(i32 -1) #3
  unreachable

31:                                               ; preds = %14
  ret void
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @perror(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i64 @fwrite(i8*, i32, i64, i32*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
